--- a/Module_01_containerization_and_infrastructure_as_code/docker_sql/upload-data.ipynb
+++ b/Module_01_containerization_and_infrastructure_as_code/docker_sql/upload-data.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
